<resources>
    <string name="app_name">Fruit Information</string>
    <string name="name">ফল পরিচিতি</string>
    <string name="apple">আপেল</string>
    <string name="apple_details">
        আপেল একটি বিশাল পরিস্কার ফল যা বিশেষভাবে পুষ্টিকর এবং স্বাস্থ্যকর।
        এটি পৃথিবীর বিভিন্ন অঞ্চলে পাওয়া যায় এবং এর বিভিন্ন ধরনের রস থাকে যা মানুষের পছন্দ ও স্বাস্থ্যকর জীবনযাত্রার জন্য উপকারী। আপেল সেগুলির মধ্যে একটি যে জিনিস যা নিজেকে আলাদা করে তুলে ধরে তা হল তার উচ্চ ফাইবার ও বিভিন্ন ভিটামিন সম্পর্কিত মাধ্যম যা স্বাস্থ্যকর ও পুষ্টিকর।
        এছাড়াও, এটি আনটিঅক্সিডেন্ট, ভিটামিন সি, পটাসিয়াম এবং অন্যান্য গুণগুলির উৎস হিসেবে পরিচিত। আপেল স্বাস্থ্যকর হৃদয়, ডায়াবেটিস নিয়ন্ত্রণ, ওজন পরিচালনা এবং স্বাস্থ্যকর ত্বকের জন্য উপকারী হতে পারে।
        এটি গুণগুলির জন্য পরিচিত হওয়ায়, আপেল পোষণীয় ও স্বাস্থ্যকর খাবার হিসেবে পরিচিত।
    </string>
    <string name="orange">কমলা</string>
    <string name="orange_details">
কমলা একটি মধুর এবং জুসি ফল। এটি ভিটামিন C এর এক অত্যন্ত ভাল উৎস এবং প্রায় পূর্ণ দিনের প্রয়োজনীয় পরিমাণ প্রদান করে। এটিতে একটি অসামান্য পরিমাণে ফোলেট, পটাসিয়াম, ক্যালসিয়াম, এবং ভিটামিন A ও বিভিন্ন গুণ রয়েছে, যা শরীরের পুষ্টিকরতা ও স্বাস্থ্যকর হৃদয়ের জন্য গুরুত্বপূর্ণ।

কমলার গুণগুলির মধ্যে রয়েছে পৃথিবীর সর্বোচ্চ উপাদানিক ভিটামিন C, যা শরীরের প্রতিরক্ষা ক্ষমতা বাড়াতে সাহায্য করে এবং শরীরের তন্ত্রসংবর্ধনে ভূমিকা পালন করে। তাছাড়াও, কমলা অবাক করা উচ্চ এনটিঅক্সিডেন্ট এবং ফোলেটের একটি ভাল উৎস, যা গর্ভাবস্থায় মা এবং শিশুর স্বাস্থ্যের জন্য গুরুত্বপূর্ণ। কমলার রস তার মধুর রসের জন্য পরিচিত এবং এটি মুখদ্বারে উষ্ণাগ্নিতে পুষ্টিকর।
    </string>
    <string name="guava">পেয়ারা</string>
    <string name="guava_details">
পেয়ারা একটি মিষ্টি ও স্বাদু ফল। এটি প্রচুর পরিমাণে ফাইবার, ভিটামিন C, পটাসিয়াম, এবং অন্যান্য পুষ্টিকর পাওয়া যায়, যা এটিকে একটি স্বাস্থ্যকর ফল করে।

পেয়ারা উচ্চ ফাইবারের একটি ভাল উৎস, যা পাচন সিস্টেমের কাজকর্মে সাহায্য করে এবং পেটের সমস্যার সাথে মোকাবিলা করে। এছাড়াও, এটি পুষ্টিকর তন্ত্র ও হৃদয়ের জন্য ভিটামিন C এর একটি ভাল উৎস। পেয়ারা সেগুলির মধ্যে একটি যে গুণ আছে যা শরীরে আন্টিওক্সিডেন্টের স্তর বাড়াতে সাহায্য করে এবং রক্তচাপ ও হৃদরোগের ঝুঁকিকে নিরাময় করে।

পেয়ারা একটি পটাসিয়ামের উৎকৃষ্ট উৎস, যা রক্তচাপ নিয়ন্ত্রণে সাহায্য করে এবং হৃদরোগের ঝুঁকি কমায়। এটি যেহেতু ভারী ফাইবারের একটি উৎকৃষ্ট উৎস, তাই এটি ওজন নিয়ন্ত্রণে সাহায্য করে এবং প্রতিদিনের পরিপূর্ণতা মেলাতে সাহায্য করে।

পেয়ারা আপনার দৈনিক খাবারে একটি মজার সংযোজন হতে পারে, সেটা স্বাস্থ্যকর এবং মজার উপাদান যুক্ত করে। তা মিলানে প্রতিদিনের পোষণীয় সংখ্যার একটি অংশ হিসেবে তার অধিকাংশ মানুষের জীবনে উপকারী হতে পারে।
    </string>
    <string name="lemon">লেবু</string>
    <string name="lemon_details">
লেবু একটি স্বাদু ও পরিচিত ফল, যা পুষ্টিকর এবং স্বাস্থ্যকর ফল। এটি বিশেষভাবে বৈষম্যজনিত বায়োকেমিক্যাল ভিটামিন C এর উৎস, যা প্রতিরক্ষা ক্ষমতা বৃদ্ধি করে এবং শরীরের প্রতিরক্ষা করে।

লেবু মিষ্টি, সুস্বাদু এবং তা আমাদের খাবারে মজার স্বাদ যোগাযোগ করে। তা সাধারণত পুষ্টিকর এবং স্বাস্থ্যকর ফল হিসেবে পরিচিত হয়, যা প্রতিদিনের পরিপূর্ণতা বৃদ্ধি করে এবং মানুষের সাধারণ স্বাস্থ্য বন্ধ করে।

লেবু অন্যান্য ফলের তুলনায় অনেক কম রক্তচাপ প্রমাণিত হয়, এবং এটি কোলেস্টেরল নিয়ন্ত্রণ করে এবং হৃদরোগের ঝুঁকি কমায়। লেবু শরীরের অস্থি এবং পেশীর স্বাস্থ্যের জন্য উপকারী হতে পারে এবং তা যুক্তিশীল ও নিয়মিত রকমে খাওয়া হতে পারে।

লেবু একটি পরিষ্কার এবং প্রচুর পুষ্টিকর ফল, যা আপনার দৈনিক পোষণে একটি সুন্দর অংশ হিসেবে যোগ করতে পারে। তা আপনার মস্তিষ্কের জন্য ভাল, স্বাস্থ্যকর এবং প্রতিষ্ঠানিত স্বাদ যোগাযোগ করে এবং আপনার শরীরের অন্যান্য অংশের জন্য উপকারী হতে পারে।
    </string>
</resources>