<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fruits"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="40sp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apple"
        android:textSize="18sp"
        android:drawableLeft="@drawable/apple_icon"
        android:textAlignment="textStart"
        android:id="@+id/apple_btn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orange"
        android:textSize="18sp"
        android:drawableLeft="@drawable/orange_icon"
        android:textAlignment="textStart"
        android:id="@+id/orange_btn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guava"
        android:textSize="18sp"
        android:drawableLeft="@drawable/guava_icon"
        android:textAlignment="textStart"
        android:id="@+id/guava_btn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        android:textSize="18sp"
        android:drawableLeft="@drawable/lemon_lemon"
        android:textAlignment="textStart"
        android:id="@+id/lemon_btn"/>
</LinearLayout>